# drf-auth

./: README.md
things/: .env  db.sqlite3  docker-compose.yml  pyproject.toml
things/home/: admin.py  serializers.py  urls.py  views.py
things/home/migrations/: 0001_initial.py
things/things/: settings.py  urls.py
